package LowLevelDesign.ParkingLot.Dto;

import LowLevelDesign.ParkingLot.Models.Ticket;
import lombok.Data;

@Data
public class GenerateTicketResponseDto {
     private Ticket ticket;
}
