package LowLevelDesign.ParkingLot.Models;

import lombok.Data;

@Data
public class BaseClass {
    private Long id;
}
