package LowLevelDesign.ParkingLot.Models;

public class ElectricCharger extends BaseClass{

}
