package LowLevelDesign.ParkingLot.Models;

public class ElectricParkingSpot extends ParkingSpot {
    private ElectricCharger electricCharger;
}

