package LowLevelDesign.ParkingLot.Models;

public class EntryGate extends Gate{
}
