package LowLevelDesign.ParkingLot.Models;

public class Exitgate extends Gate{
}
