package LowLevelDesign.ParkingLot.Models;

public class Operator {
    String name;
}
