package LowLevelDesign.ParkingLot.Services;

import LowLevelDesign.ParkingLot.Enum.VehicleType;
import LowLevelDesign.ParkingLot.Models.Vehicle;

public class VehicleService {


    public Vehicle registerVehicle(String vehicleNumber, VehicleType vehicleType){
        return null;
    }

    public Vehicle getVehicle(String vehicleNo){
        return null;
    }
}
