package LowLevelDesign.ParkingLot.Strategies;

public class DayWiseParkingFeesStrategy  implements  ParkingfeesStrategy{
    @Override
    public double calculateParkingFees(long entryTime, long exitTime) {
        return 0;
    }
}
